Revision history for Perl extension Google::API::Client

{{$NEXT}}
        - Start using Dist::Milla #8

0.09  Fri Feb  8 22:13:43 JST 2013
        - Fixed an issue #4

0.08  Thu Sep 27 14:40:05 JST 2012
        - Fixed an issue #7

0.07  Fri Aug  3 23:25:39 JST 2012 
        - Fixed an issue #6
        - Added calendar events samples

0.06  Wed Aug  1 01:24:21 JST 2012
        - Fixed an issue #5 (Thanks, uehatsu)

0.05  Tue Feb 14 01:01:42 JST 2012
        - Fixed issues of URL delimiter at OAuth2::Client #1 #3 (uechoco, gnustavo)
        - Performance improvement for method lookup #2 (gnustavo)
0.04  Fri Oct 28 01:50:23 JST 2011
        - Fixed a bug that G::A::Client didn't have methods if Resource Document has both nested resources and methods like blogger v2.
0.03  Tue Sep 27 12:43:25 JST 2011
        - Added key parameter on execute method for Simple API Access
0.02  Tue Sep 27 02:43:30 JST 2011
        - Implemented nested resource
0.01  Wed Jul 13 02:34:42 2011
        - original version