@@ -6,7 +6,7 @@ use feature qw/say/;
 
 use FindBin;
 use Google::API::Client;
-use OAuth2::Client;
+use Google::API::OAuth2::Client;
 
 use lib 'eg/lib';
 use Sample::Utils qw/get_or_restore_token store_token/;
@@ -15,10 +15,10 @@ use constant MAX_PAGE_SIZE => 50;
 
 
 my $client = Google::API::Client->new;
-my $service = $client->build('adsense', 'v1');
+my $service = $client->build('adsense', 'v1.3');
 
 my $file = "$FindBin::Bin/../client_secrets.json";
-my $auth_driver = OAuth2::Client->new_from_client_secrets($file, $service->{auth_doc});
+my $auth_driver = Google::API::OAuth2::Client->new_from_client_secrets($file, $service->{auth_doc});
 
 my $dat_file = "$FindBin::Bin/token.dat";
 my $access_token = get_or_restore_token($dat_file, $auth_driver);
