@@ -8,7 +8,7 @@ use JSON;
 use Data::Dumper;
 
 use Google::API::Client;
-use OAuth2::Client;
+use Google::API::OAuth2::Client;
 
 use lib 'eg/lib';
 use Sample::Utils qw/get_or_restore_token store_token/;
@@ -17,7 +17,7 @@ use Sample::Utils qw/get_or_restore_token store_token/;
 my $service = Google::API::Client->new->build('analytics', 'v2.4');
 
 my $file = "$FindBin::Bin/../client_secrets.json";
-my $auth_driver = OAuth2::Client->new_from_client_secrets($file, $service->{auth_doc});
+my $auth_driver = Google::API::OAuth2::Client->new_from_client_secrets($file, $service->{auth_doc});
 
 my $dat_file = "$FindBin::Bin/token.dat";
 
