@@ -2,6 +2,7 @@ Revision history for Perl extension Google::API::Client
 
 {{$NEXT}}
         - Start using Dist::Milla #8
+        - Important changes: Rename OAuth2::Client to Google::API::OAuth2::Client #9
 
 0.09  Fri Feb  8 22:13:43 JST 2013
         - Fixed an issue #4
